tests/baselines/reference/blockScopedFunctionDeclarationInStrictClass.errors.txt
tests/cases/compiler/blockScopedFunctionDeclarationInStrictClass.ts(4,22): error TS1251: In ES5 or lower, function declarations are not allowed in block scope. Class definitions are automatically in strict mode.
tests/cases/compiler/blockScopedFunctionDeclarationInStrictClass.ts(7,9): error TS2304: Cannot find name 'foo'.


==== tests/cases/compiler/blockScopedFunctionDeclarationInStrictClass.ts (2 errors) ====
    class c {
        method() {
            if (true) {
                function foo() { }
                         ~~~
!!! error TS1251: In ES5 or lower, function declarations are not allowed in block scope. Class definitions are automatically in strict mode.
                foo(); // ok
            }
            foo(); // not ok
            ~~~
!!! error TS2304: Cannot find name 'foo'.
        }
    }